crates/proef-cli/tests/snapshots/corpus__artifact__tests-features-510-api-search-matrix--search-over-people-returns-200.hurl.snap
---
source: crates/proef-cli/tests/corpus.rs
expression: "String::from_utf8(content_a).unwrap()"
---
# proef artifact — Search over people returns 200
# source: tests/features/510_api_search_matrix.feature:14
# replay: hurl --test tests-features-510-api-search-matrix--search-over-people-returns-200.hurl --variables-file tests-features-510-api-search-matrix--search-over-people-returns-200.vars --secret apiToken=<value>

# tests/features/510_api_search_matrix.feature:7 — the workspace is provisioned (fixture warm-up probe)
# optional
GET http://127.0.0.1:8787/health
HTTP 200

# tests/features/510_api_search_matrix.feature:7 — the workspace is provisioned (provision the environment)
POST http://127.0.0.1:8787/api/v1/env/provision
Authorization: Bearer {{apiToken}}
{"run": "proef-snapshot"}
HTTP 201
[Captures]
envId: jsonpath "$.id"

# tests/features/510_api_search_matrix.feature:15 — the operator searches for Jordan (search people for Jordan)
GET http://127.0.0.1:8787/api/v1/admin/search/people
Authorization: Bearer {{apiToken}}
[Query]
q: Jordan
HTTP *
[Asserts]
status == 200
