crates/proef-cli/tests/snapshots/corpus__artifact__tests-features-520-api-breadth--a-custom-note-body-is-sent-from-a-docstring.vars.snap
---
source: crates/proef-cli/tests/corpus.rs
expression: "String::from_utf8(content_a).unwrap()"
---
# proef variables for tests-features-520-api-breadth--a-custom-note-body-is-sent-from-a-docstring.hurl
# secret `apiToken` — supply at replay: --secret apiToken=<value>
