crates/proef-cli/tests/snapshots/corpus__artifact__tests-features-520-api-breadth--a-profile-form-is-submitted.hurl.snap
---
source: crates/proef-cli/tests/corpus.rs
expression: "String::from_utf8(content_a).unwrap()"
---
# proef artifact — A profile form is submitted
# source: tests/features/520_api_breadth.feature:12
# replay: hurl --test tests-features-520-api-breadth--a-profile-form-is-submitted.hurl

# tests/features/520_api_breadth.feature:13 — the profile form is submitted for Acme
POST http://127.0.0.1:8787/form
[Form]
name: Acme
city: Den Haag
HTTP *
[Asserts]
jsonpath "$.status" == "ok"
